Fix alignment issue with hover images and titles on index

--- a/sass/layouts/_panels.scss
+++ b/sass/layouts/_panels.scss
@@ -360,7 +360,7 @@ background-color: $light_blue;
   bottom: 0;
   padding: 12px;
   padding-right: 15px;
-  padding-bottom: 8px;
+  padding-bottom: 9px;
   margin: 0px;
 }
 
