--- a/sass/main.css
+++ b/sass/main.css
@@ -2799,7 +2799,7 @@ main .container {
   bottom: 0;
   padding: 12px;
   padding-right: 15px;
-  padding-bottom: 8px;
+  padding-bottom: 9px;
   margin: 0px; }
 
 .faq-panel svg {
